--- a/sway/.config/sway/config
+++ b/sway/.config/sway/config
@@ -37,6 +37,8 @@ exec swayidle -w \
      timeout 600 'swaymsg "output * dpms off"' \
      resume 'swaymsg "output * dpms on"' \
 
+exec_always autotiling
+
 font pango:JetBrainsMonoNerdFont Regular 11
 
 default_border pixel 2
