--- a/sway/.config/sway/config
+++ b/sway/.config/sway/config
@@ -35,6 +35,7 @@ exec foot --server
 exec gammastep-indicator
 
 exec swayidle -w \
+     timeout 300 'swaylock-blur' \
      timeout 600 'swaymsg "output * dpms off"' \
      resume 'swaymsg "output * dpms on"' \
 
