Add nerd fonts to status

--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -26,13 +26,11 @@ bind l select-pane -R
 #set-option -g window-status-separator ""
 set-window-option -g window-status-style fg=white,bold
 set-window-option -g window-status-format "#[fg=white,bold] #I #W "
-set-window-option -g window-status-current-format "#[fg=black,bold,bg=color8] #I #W "
+set-window-option -g window-status-current-format "#[fg=black,bold,bg=color8] #I #W #[fg=color8,bold,bg=default]"
 
 set-option -g status-style fg=red
-set-option -g status-left " #{session_name} "
-set-option -g status-left-style fg=black,bold,bg=yellow
-set-option -g status-right " #{?window_bigger,[#{window_offset_x}#,#{window_offset_y}] ,}\ #[fg=black,bold,bg=blue] #{user}\ #[fg=black,bold,bg=green] %H:%M %m/%d/%y "
-#set-option status-right-style fg=black,bg=green
+set-option -g status-left "#[fg=black,bold,bg=yellow] #{session_name} #[fg=yellow,bold,bg=magenta]\#[fg=black,bold,bg=magenta] #P #[fg=magenta,bold,bg=default]"
+set-option -g status-right " #{?window_bigger,[#{window_offset_x}#,#{window_offset_y}] ,}\ #[fg=blue,bold,bg=default]\#[fg=black,bold,bg=blue] #{user}\ #[fg=green,bold,bg=blue]\#[fg=green,bold,bg=default]\#[fg=black,bold,bg=green] %H:%M %m/%d/%y "
 set-option -g status-justify centre
 
 # List of plugins
